--- a/app/src/main/res/drawable/add.xml
+++ b/app/src/main/res/drawable/add.xml
@@ -1,8 +1,13 @@
-<vector android:autoMirrored="true" android:height="24dp"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
-        android:pathData="M12,9v6m3,-3H9m12,0a9,9 0,1 1,-18 0,9 9,0 0,1 18,0z"
-        android:strokeColor="@color/purple_200" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="1.5"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,9v6m3,-3H9m12,0a9,9 0,1 1,-18 0,9 9,0 0,1 18,0z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="@color/purple_500"
+      android:strokeLineCap="round"/>
 </vector>
