--- a/app/src/main/res/drawable/desplegar1.xml
+++ b/app/src/main/res/drawable/desplegar1.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="currentColor"
+      android:strokeColor="@color/purple_500"
       android:strokeLineCap="round"/>
 </vector>
